Improved copying data base file

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,8 @@
-file(COPY ${CMAKE_SOURCE_DIR}/database/ DESTINATION ${CMAKE_BINARY_DIR}/test FILES_MATCHING  PATTERN "*.h5")
+# Copy all *.h5 in database/
+file(GLOB_RECURSE DATA_FILES "${CMAKE_SOURCE_DIR}/database/*.h5")
+foreach(datafile ${DATA_FILES})
+    configure_file(${datafile} ${CMAKE_BINARY_DIR}/test/ COPYONLY)
+endforeach()
 
 add_subdirectory(c++)
 add_subdirectory(python)
