--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,5 @@ script:
     cmake ../irbasis  \
     -DCMAKE_BUILD_TYPE=Debug                              \
     -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR/installed
+  - make
   - make test
