--- a/.travis.yml
+++ b/.travis.yml
@@ -35,3 +35,6 @@ script:
     -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR/installed
   - make
   - make test
+  - python setup.py bdist_wheel
+  - cd dist
+  - pip install irbasis-*.whl
