--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
       - libhdf5-serial-dev
 
 install:
-  - pip install -r requirements.txt
+  - pip install -r python/requirements.txt
 
 script:
   # Stop on first error
