--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,11 @@ script:
   - cd build
   - |
     cmake ../irbasis  \
-    -DCMAKE_BUILD_TYPE=Debug                              \
-    -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR/installed
+    -DCMAKE_BUILD_TYPE=Debug
   - make
   - make test
   - python setup.py bdist_wheel
   - cd dist
   - pip install irbasis-*.whl
+  - cd $TRAVIS_BUILD_DIR/irbasis/sample
+  - bash run_all_python_scripts.sh
