--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ script:
   - python setup.py bdist_wheel
   - cd dist
   - pip install irbasis-*.whl
-  - cd $TRAVIS_BUILD_DIR/irbasis/sample
+  - cd $TRAVIS_BUILD_DIR/sample
   - bash run_all_python_scripts.sh
