--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,5 @@ script:
   - cd dist
   - pip install irbasis-*.whl
   - cd $TRAVIS_BUILD_DIR/sample
+  - pip install matplotlib
   - bash run_all_python_scripts.sh
