--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
   apt:
     packages:
       - libhdf5-serial-dev
+      - libboost-dev
 
 install:
   - pip install -r python/requirements.txt
