* Removed Python 2.7 from Travis CI * Update numpy and scipy in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ sudo: required
 dist: trusty
 
 python:
-    - 2.7
     - 3.4
     - 3.5
     - 3.6
@@ -21,7 +20,7 @@ addons:
       - libboost-dev
 
 install:
-  - pip install -r python/requirements.txt
+  - pip install -r python/requirements.txt -U
 
 script:
   # Stop on first error
